--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
   },
   "dependencies": {
     "fast-xml-parser": "^4.4.1",
+    "jszip": "^3.10.1",
     "pako": "^2.1.0",
-    "unzipper": "^0.12.3",
     "yargs": "^17.7.2"
+  },
+  "optionalDependencies": {
+    "@aws-sdk/client-s3": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^24.6.0",
