chore: add MIT LICENSE file
- Copyright by idavidka and @treeviz contributors
- Added LICENSE to package.json files array

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "LICENSE",
+    "README.md"
   ],
   "bin": {
     "gno-to-ged": "dist/cli-gno-to-ged.js",
