--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
   },
   "author": "idavidka & @treeviz contributors",
   "license": "MIT",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "keywords": [
     "genopro",
     "gno",
