--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
 		"rootDir": "src",
 		"skipLibCheck": true,
 		"strict": true,
-		"target": "ES2023"
+		"target": "ES2023",
+		"types": ["node", "vitest/globals"]
 	},
 	"exclude": [
 		"src/**/__tests__",
